[package]
name = "amongus-shuffler"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
path = "src/main.rs"
name = "amongus-shuffler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
rand = "0.8.5"
